# guitar-scale-finder

./: README.md  pyproject.toml
guitar_scale_finder/: __main__.py  scale_finder.py
